--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-vue-next": "^0.456.0",
     "pinia": "^2.2.6",
     "radix-vue": "^1.9.9",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3",
+    "@types/lodash": "^4",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
     "@vue/tsconfig": "^0.6.0",
