--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.4.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.456.0",
