--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash": "^4.17.21",
     "lucide-vue-next": "^0.456.0",
     "pinia": "^2.2.6",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "radix-vue": "^1.9.9",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
