--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@supabase/supabase-js": "^2.46.1",
+    "@tanstack/vue-table": "^8.20.5",
     "@vee-validate/zod": "^4.14.7",
     "@vueuse/core": "^11.2.0",
     "axios": "^1.7.7",
