--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@supabase/supabase-js": "^2.46.1",
     "@tanstack/vue-table": "^8.20.5",
+    "@unovis/ts": "1.5.0-beta.3",
+    "@unovis/vue": "^1.5.0-beta.3",
     "@vee-validate/zod": "^4.14.7",
-    "@vueuse/core": "^11.2.0",
+    "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -34,6 +37,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vee-validate": "^4.14.7",
     "vue": "^3.5.12",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
