--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unovis/ts": "1.5.0-beta.3",
     "@unovis/vue": "^1.5.0-beta.3",
     "@vee-validate/zod": "^4.14.7",
+    "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^11.3.0",
     "axios": "^1.7.7",
     "chart.js": "^4.4.6",
