--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.49.1",
     "@types/js-cookie": "^3",
     "@types/lodash": "^4",
     "@types/node": "^22.9.0",
